# tap-hubspot-beta

./: .gitignore  README.md  pyproject.toml
tap_hubspot/: auth.py  client.py  client_base.py  client_v1.py  client_v3.py  streams.py  tap.py
tap_hubspot_beta/: auth.py  client_base.py  client_v1.py  client_v2.py  client_v3.py  client_v4.py  streams.py  tap.py
